@@ -2,6 +2,8 @@ instrument-control >> Low level I/O functions
 Common Functions
   flushinput
   flushoutput
+  readline
+  writeline
 General
   instrhelp
   instrhwinfo
