@@ -21,7 +21,9 @@ TEXI2PDF  ?= texi2pdf -q
 
 # work out a possible help generator
 ifeq ($(strip $(QHELPGENERATOR)),)
-  ifneq ($(shell qhelpgenerator -qt5 -v 2>/dev/null),)
+  ifneq ($(shell qhelpgenerator-qt5 -v 2>/dev/null),)
+    QHELPGENERATOR = qhelpgenerator-qt5
+  else ifneq ($(shell qhelpgenerator -qt5 -v 2>/dev/null),)
     QHELPGENERATOR = qhelpgenerator -qt5
   else ifneq ($(shell qhelpgenerator-qt5 -v 2>/dev/null),)
     QHELPGENERATOR = qhelpgenerator-qt5
