@@ -9,6 +9,10 @@ Summary of important user-visible changes for instrument-control 0.7.1+
 
   ** added QT help doc generation
 
+  ** added common functions:
+     writeline
+     readline
+
 Summary of important user-visible changes for instrument-control 0.7.1
 -------------------------------------------------------------------
 
